--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -3,23 +3,28 @@ comment. Add your CSS code
 from Unit 1 - 5 below  */
 h1{
 	color:rgb(2,132,130);
+	text-align: center;
 }
 body{
 	text-align:center;
 }
 h2{
 	color:#ffd700;
+	text-align: center;
+}
+p{
+	text-align: center;
 }
 
 .board{
-	height:50%;
+	height:80%;
 	width:50%;
 	display:inline-block;
 }
 .card{
 	height:200px;
 	width:150px;
-	border:solid 1px;
+	border:solid 1px black;
 	background-color:rgb(255,255,0);
 	border-radius:10px;
 	float:left;
@@ -52,4 +57,9 @@ nav a:hover{
 }
 footer{
 	background-color: #808080;
+	text-align: center;
+}
+img {
+	height: 200px;
+	width: 150px;
 }
